apps/stirling-pdf/components/istio/istio-virtualservice.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "VirtualService"
metadata:
  name: "stirling-pdf"
spec:
  hosts:
    - "stirling-pdf"
  gateways:
    - "istio-system/gateway"
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: "stirling-pdf"
            port:
              number: 80
